<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#233CCD"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_Correct_Answer"
        android:text="@string/correct_answer"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:background="#000"
        android:textColor="#F8F8F8F8"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
         />

    <TextView
        android:id="@+id/txt_Right_Answer"
        android:text="@string/textview"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="30dp"
        android:background="#000"
        android:layout_marginTop="5dp"
        android:textColor="#F8F8F8F8"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/text_Question_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f8f8f8"
            android:padding="10dp"
            android:text="@string/random_text"
            android:textAlignment="center"
            android:textColor="#491494"
            android:textSize="45sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/et_User_Input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_text"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#000"
            android:padding="20dp"
            android:ems="10"
            android:inputType="textPersonName"
             />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/btShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A42626"
            android:padding="10dp"
            android:text="@string/show"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#0E6030"
            android:padding="10dp"
            android:text="@string/check"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#AA00FF"
            android:padding="10dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>